🐞 fix: nav drawer show scrollbar

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -109,19 +109,36 @@
 
 .img_detail_scale_on .img_scale_scroll {
   display: block;
+  min-width: 500px;
+  min-height: 500px;
   max-width: 100vw;
   max-height: calc(100vh - 30px);
   overflow: auto;
 }
 
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+.nav_drawer .v-navigation-drawer__content::-webkit-scrollbar,
 .img_scale_scroll::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
+  width: 10px !important;
+  height: 10px !important;
 }
 
 .img_scale_scroll::-webkit-scrollbar-track {
   background: #e6e6e6;
   border-left: 1px solid #dadada;
+}
+
+.nav_drawer .v-navigation-drawer__content::-webkit-scrollbar-thumb {
+  background: #b0b0b0;
+  border: solid 3px #fff;
+  border-radius: 7px;
+}
+
+.theme--dark .nav_drawer .v-navigation-drawer__content::-webkit-scrollbar-thumb {
+  border: solid 3px #363636;
 }
 
 .img_scale_scroll::-webkit-scrollbar-thumb {
@@ -130,8 +147,13 @@
   border-radius: 7px;
 }
 
+.nav_drawer .v-navigation-drawer__content::-webkit-scrollbar-thumb:hover,
 .img_scale_scroll::-webkit-scrollbar-thumb:hover {
   background: black;
+}
+
+.theme--dark .nav_drawer .v-navigation-drawer__content::-webkit-scrollbar-thumb:hover {
+  background: #ddd;
 }
 
 .v-date-picker-table > table > thead > tr > th {
